@@ -287,6 +287,16 @@ if test x$HAVE_BZIP2_SUPPORT = xyes; then
   fi
 fi
 
+AC_ARG_ENABLE(dialog,
+[  --enable-dialog           enable the ncurses/dialog UI [default=yes]],
+              , enable_dialog=yes)
+if test x$enable_dialog = xyes; then
+	CFLAGS="$CFLAGS -DENABLE_DIALOG"
+	COMMON_LIBS="dialog/libdialog.a"
+	CONSOLE_OBJS="dialog_ui.c"
+	DO_DIALOG="do-dialog"
+fi
+
 dnl enable ZIP support
 AC_ARG_ENABLE(zip,
 [  --enable-zip              enable ZIP archives support  [default=no]],
@@ -413,6 +423,8 @@ AC_SUBST(GTK_LIBS)
 AC_SUBST(X11_LIBS)
 AC_SUBST(EXTRA_LIBS)
 AC_SUBST(CONSOLE_LIBS)
+AC_SUBST(CONSOLE_OBJS)
+AC_SUBST(COMMON_LIBS)
 AC_SUBST(BZ2LIB)
 AC_SUBST(ARCH)
 AC_SUBST(LIBC)
@@ -425,6 +437,7 @@ AC_SUBST(SETUP_VERSION_MAJOR)
 AC_SUBST(SETUP_VERSION_MINOR)
 AC_SUBST(SETUP_VERSION_RELEASE)
 AC_SUBST(BRANDELF)
+AC_SUBST(DO_DIALOG)
 
 AC_OUTPUT(Makefile plugins/Makefile dialog/Makefile)
 
